--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Amed Moreno</title>
-  <link rel="stylesheet" type="text/css" href="css/styles.css">
+  <link rel="stylesheet" type="text/css" href="CSS/styles.css">
   <link rel="icon" href="favicon-looker.ico">
   <link href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat|Satisfy&display=swap" rel="stylesheet">
 </head>
